<resources>
    <string name="app_name">Locate</string>
    <string name="content">App, Contact, Web</string>
    <string name="pref_app">app</string>
    <string name="pref_contact">contact</string>
    <string name="pref_search_range">Search Range</string>
    <string name="pref_debug">Debug</string>
    <string name="pref_others">Others</string>
    <string name="pref_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="app_widget_hint">Please Enter Key Word</string>
    <string name="website">Website</string>
    <string name="check_for_update">Check for Update</string>
    <string name="developer_website">Developer Website</string>
    <string name="update_dialog_title">Find new Version</string>
    <string name="update_dialog_download">Download</string>
    <string name="update_dialog_cancel">Cancel</string>
    <string name="latest_version">Latest Version</string>
    <string name="internet">Internet</string>
</resources>
