<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
        android:key="pref_search_range"
        android:title="@string/pref_search_range" >
        
        <!-- whether search application or not -->
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_app"
            android:title="@string/pref_app" />
        
        <!-- whether search contact or not -->
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_contact"
            android:title="@string/pref_contact" />
        
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="pref_others"
        android:title="@string/pref_others" >
        
        <SwitchPreference
            android:defaultValue="false"
            android:key="pref_debug"
            android:title="@string/pref_debug" />

        <Preference
            android:key="pref_about"
            android:title="@string/pref_about" />
        
    </PreferenceCategory>

</PreferenceScreen>