<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentEnd="false"
    android:layout_alignParentRight="false"
    android:gravity="center|bottom"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grid_item_state"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp" >

        <ImageView
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" >
        </ImageView>

        <TextView
            android:id="@+id/version_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Locate 1.0.0" >
        </TextView>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/searchResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/project_website_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/website" />
        
        <View    
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray" />
        
        <TextView
            android:id="@+id/check_for_update_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/check_for_update" />
        
        <View    
            android:layout_width="wrap_content"
            android:layout_height="0.5dp"
            android:background="@color/gray" />
        
        <TextView
            android:id="@+id/developer_website_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/developer_website" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp"
        android:gravity="center|bottom"
        android:text="Copyright (c) 2015 Oliver" />
            
</LinearLayout>

